
Revision history for PostgreSQL extension semver.

0.15.0
      - Fixed incorrect parsing of semver build metadata.
      - Fixed text foratting of build metadata-only semver values.
      - Implemented pre-release precedence scheme as per semantic versioning
        2.0.0 section 11. Thanks to Sergey Kozlov for the report (Issue #23).

0.14.0  2016-08-11T05:38:27Z
      - Updated the extension version in `semver.control` to 0.13.0, which
        evidently I forgot to do for that release. Thanks to Stanislav Lorenc
        for the report (Issue #21).

0.13.0  2016-07-30T21:06:15Z
      - Fixed bug where a dash (-) was disallowed within the metadata part of
        a semver. Thanks to @TerraTech for the report (Issue #19) and Tom
        Davis for the fix (PR #20).

0.12.0  2016-06-11T06:00:19Z
      - Fixed bug where some items described in the SemVer 2.0.0 Spec, section
        10, were not properly recognized as semvers. Thanks to Xavier Caron
        for the fix (with tests!) (PR #17).

0.11.0  2016-05-23T20:29:49Z
      - Added `is_semver()`, thanks to a pull request from Xavier Caron
        (PR #14).
      - Fixed bug where version parts with non-leading 0 were considered
        invalid. Thanks to @JeremySTX for the report (Issue #15) and Tom Davis
        for the fix (PR #16).

0.10.0  2016-05-12T00:28:03Z
      - Updated extension to support Semantic Versioning 2.0.0, thanks to Tom
        Davis (PR #13).
      - Improved error output to mark specific bad character, where possible,
        thanks to Tom Davis.
      - BREAKING CHANGE: `semver()` and cast constructors no longer support
        the semver 1.0.0-beta format format "X.Y.Zpre" (that is, without the
        dash), since it's not compatible with the semver 2.0.0 spec. Use
        `to_semver()` to convert it to X.Y.Z-pre", or specify "X.Y.Z-pre"
        directly.

0.5.0   2014-12-06T00:29:17Z
      - Fixed issue where the release file could be listed twice when